# ubuntu-phablet_libhybris

./: Makefile  README.md
android/camera/: camera_compatibility_layer.h
android/input/: android_input_stack_compatibility_layer_test.cpp  input_stack_compatibility_layer.h  input_stack_compatibility_layer_flags.h
android/surface_flinger/: glcommon.cpp  surface_flinger_compatibility_layer.cpp
common/: hooks.c
compat/camera/: Android.mk  camera_compatibility_layer.cpp  camera_compatibility_layer.h  camera_compatibility_layer_capabilities.h  camera_compatibility_layer_configuration_translator.h  recorder_compatibility_layer.h  test.cpp
compat/input/: Android.mk  android_input_stack_compatibility_layer_test.cpp  input_stack_compatibility_layer.cpp  input_stack_compatibility_layer.h  input_stack_compatibility_layer_codes_key.h  input_stack_compatibility_layer_flags.h  input_stack_compatibility_layer_flags_key.h  input_stack_compatibility_layer_flags_motion.h
compat/media/: Android.mk  media_compatibility_layer.cpp  media_compatibility_layer.h  recorder_compatibility_layer.cpp  recorder_compatibility_layer.h  test_player.cpp  test_player.h
compat/surface_flinger/: Android.mk  (+7 more)
compat/ubuntu_application_api/tests/mock/: CMakeLists.txt
debian/: changelog  control  copyright  libhybris-dev.dirs.in  libhybris-dev.install  libhybris-dev.install.in  libhybris-test.install  libhybris-test.install.in  libhybris.install  libhybris.install.in  rules
egl/: egl.c
hybris/: Makefile  install.sh
ics/: linker.c
sf/: sf.cpp  surface_flinger_compatibility_layer.h  test.cpp
(+85 files in other folders)
